...
    
    private func proceedToNextQuestionOrResults() {
        if self.isLastQuestions() {
            let text = "Вы ответили на \(correctAnswers) из 10, попробуйте еще раз!"
            
            let viewModel = QuizResultsViewModel(
                title: "Игра закончена!",
                text: text,
                buttonText: "Сыграть еще раз")
            viewController?.show(quiz: viewModel)//Выводим алерт в случае если вопросы закончились
        }else{
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
